--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "line-bot-gcf",
+  "name": "line-bot",
   "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "axios": "^1.6.0",
+    "express": "^4.18.2",
     "googleapis": "^126.0.0"
   }
 }
