--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^7.0.0",
     "axios": "^1.6.0",
     "express": "^4.18.2",
     "googleapis": "^126.0.0"
