--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.0.0",
     "axios": "^1.6.0",
+    "cheerio": "^1.0.0",
     "express": "^4.18.2",
     "googleapis": "^126.0.0"
   }
