--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.0",
     "cheerio": "^1.0.0",
     "express": "^4.18.2",
-    "googleapis": "^126.0.0"
+    "googleapis": "^126.0.0",
+    "opencc-js": "^1.0.5"
   }
 }
