--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.0.0",
     "@google-cloud/tasks": "^5.0.0",
+    "@line/bot-sdk": "^10.5.0",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
