--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@line/bot-sdk": "^10.5.0",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "googleapis": "^126.0.0",
     "opencc-js": "^1.0.5"
